# svdash

./: requirements.txt
.claude/: settings.local.json
compute_server/: README.md  server.py
django_app/: README.md  db.sqlite3  manage.py  requirements.txt
django_app/core/: admin.py  forms.py  models.py  services.py  urls.py  views.py
django_app/core/migrations/: 0001_initial.py
django_app/core/templates/core/: analysis.html  base.html  compare.html  history.html  index.html
django_app/core/templates/core/partials/: components.html  matrices.html  multi_k.html  reconstruction.html
django_app/static/css/: style.css
django_app/svdash/: asgi.py  settings.py  wsgi.py
kg_transform/: .env.example  .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml
kg_transform/api/: serializers.py  urls.py  views.py
kg_transform/api/tests/: test_e2e_api.py  test_ui.py
kg_transform/core/: models.py
kg_transform/core/migrations/: 0001_initial.py
kg_transform/kg_parser/: apps.py  diff.py  loader.py  parser.py  validator.py
kg_transform/kg_parser/tests/: test_diff.py  test_parser.py  test_validator.py
kg_transform/kg_transform/: asgi.py  settings.py  urls.py  wsgi.py
kg_transform/llm_engine/: apps.py  client.py  orchestrator.py  prompts.py  provider.py
kg_transform/llm_engine/tests/: test_flow.py
kg_transform/templates/ui/: base.html  detail.html  history.html  index.html
kg_transform/templates/ui/partials/: result.html  status.html
kg_transform/ui/: urls.py  views.py
